--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,8 +1,10 @@
-Чтобы сбросить свой пароль перейдите по ссылке:<br>
+Уважаемый (-ая) «ИМЯ»!
 
+Вы получили это письмо потому, что воспользовались функцией восстановления пароля в онлайн диспетчерской группы компаний «3В инженерные системы».
+Для того, чтобы установить новый пароль, перейдите по ссылке:
 <a href="<%= edit_password_reset_url(@user.password_reset_token) %>">
 <%= edit_password_reset_url(@user.password_reset_token) %><a><br>
 
-Если вы не отправляли запрос на изменение пароля, просто проигнорируйте это письмо.<br>
+С уважением,
+группа компаний «3В инженерные системы».
 
-С уважением, команда 3V-online.
