--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -68,9 +68,6 @@
 				</td>
 				<td>
 					<%= countOfEntries(user) %>
-
-				</td>
-				<td>
 					<button id="<%= div_id -%>" type="button" class="btn btn-default btn-xs calendarButton pull-right">
 						<span class="glyphicon glyphicon-calendar"></span>
 					</button>
@@ -87,8 +84,11 @@
 								<% end %>
 						<% end %>
 					</div>
+				</td>
+				<td>
+
 					<div class = "pull-right">
-					<%= link_to 'test', controller: :requistions, action: :index, position: 12, value: user.id%>
+					<%= link_to 'Заявки рабочего', controller: :requistions, action: :index, position: 12, value: user.id%>
 
 						<%= link_to edit_user_path(user) do%>
 							<span class="glyphicon glyphicon-pencil" title="редактировать"></span>
