--- a/app/views/users/req.html.erb
+++ b/app/views/users/req.html.erb
@@ -2,9 +2,9 @@
 
 <div class="container">
 <div class="row">
-<div class = "col-md-2">
+<div class = "col-xs-2">
 				</div>
-				<div class = "col-md-8">
+				<div class = "col-xs-8">
 					<h3>Ваши заявки (<%= @user.pairs.count %>)</h3>
 
 					<table id="requistion_for_workers" class="table">
