--- a/app/views/users/contract.html.erb
+++ b/app/views/users/contract.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, "Мои контракты") %>
 <div class="container">
 <div class="row">
-					<div class = "col-md-2">
+					<div class = "col-xs-2">
 					</div>
-				<div class="col-md-8">
+				<div class="col-xs-8">
 					<h3>Контракты (<%= @user.contracts.count %>)</h3>
 					<table id = 'contracts_clinet' class="table table-bordered table-striped">
 						<thead>
