--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, 'Регистрация') %>
 <div class="container">
 <div class="row">
-	<div class="col-md-4">
+	<div class="col-xs-4">
 	</div>
-	<div class="col-md-4">
+	<div class="col-xs-4">
 		<h1>Регистрация</h1>
 		
 		<%= render 'shared/error_messages' %>
