buttons in Tables

--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, 'Все контракты') %>
+<h1>Все контракты</h1>
+
 <div class="container">
 <table id="contracts" class="table table-striped">
 	<thead>
