--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -4,7 +4,7 @@
 
 <div id = "archive">
 <%= link_to controller: "requistions", action: "index", position: '11', value: 'Завершено' do %>
-				<div class="btn btn-default">
+				<div class="btn btn-default btnarchive">
 					<span class="glyphicon glyphicon-briefcase"></span>&nbspАрхив
 				</div>
 			<% end %>
