--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -315,3 +315,32 @@ button.ColVis_Button, .form-control {
 	background-image: none !important;
 	background-color: white !important;
 }
+
+
+.btnarchive {
+	font-size: 12px;
+	width: 81px;
+	height: 31px;
+	background-image: none !important;
+	background-color: white !important;
+  /*background-color: hsl(203, 100%, 32%) !important;*/
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#007dcc", endColorstr="#0064a3");
+  /*background-image: -khtml-gradient(linear, left top, left bottom, from(#007dcc), to(#0064a3));
+  background-image: -moz-linear-gradient(top, #007dcc, #0064a3);
+  background-image: -ms-linear-gradient(top, #007dcc, #0064a3);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #007dcc), color-stop(100%, #0064a3));
+  background-image: -webkit-linear-gradient(top, #007dcc, #0064a3);
+  background-image: -o-linear-gradient(top, #007dcc, #0064a3);
+  background-image: linear-gradient(#007dcc, #0064a3);*/
+  border-color: #0064a3 #0064a3 hsl(203, 100%, 30%) !important;
+  color: black !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.13) !important;
+  -webkit-font-smoothing: antialiased !important;
+  -moz-border-radius: 15px !important;
+  border-radius: 4px !important;
+  text-shadow: none !important;
+}
+
+
+
