--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,9 +1,9 @@
-Уважаемый (-ая) «ИМЯ»!
+Уважаемый (-ая) <%= @user.name %>!
 
 Вы получили это письмо потому, что воспользовались функцией восстановления пароля в онлайн диспетчерской группы компаний «3В инженерные системы».
 Для того, чтобы установить новый пароль, перейдите по ссылке:
 <a href="<%= edit_password_reset_url(@user.password_reset_token) %>">
-<%= edit_password_reset_url(@user.password_reset_token) %><a><br>
+<%= edit_password_reset_url(@user.password_reset_token) %></a><br>
 
 С уважением,
 группа компаний «3В инженерные системы».
