--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= link_to user.name, user %></td>
+  <td><%= user.name %></td>
   <td><%= user.email %></td>
   <td><%= user.phone %></td>
   <% if current_user.admin? %>
@@ -10,7 +10,7 @@
         &nbsp
         <%= link_to 'Заявки', controller: :users, action: :reqclient, id: user.id%>
         <%= link_to 'Контракты', controller: :users, action: :contract, id: user.id%>
-        <%= link_to edit_user_path(user) do%>
+        <%= link_to user_path(user) do%>
           <span class="glyphicon glyphicon-pencil" title="редактировать"></span>
         <% end %>
     </div>
