--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -56,7 +56,7 @@
 					<%= user.id %>
 				</td>
 				<td>
-				<%= link_to user.name, user %>
+				<%= user.name %>
 				<% if current_user.admin? %>
 					<% div_id = "calendarBut-#{user.id}" -%>
 				</td>
@@ -90,7 +90,7 @@
 					<div class = "pull-right">
 					<%= link_to 'Заявки рабочего', controller: :requistions, action: :index, position: 12, value: user.id%>
 
-						<%= link_to edit_user_path(user) do%>
+						<%= link_to user_path(user) do%>
 							<span class="glyphicon glyphicon-pencil" title="редактировать"></span>
 						<% end %>
 						<%= link_to user, method: :delete, data: { confirm: "Вы уверены, что хотите удалить?" } do%>
